LIB-89 Fix jump links for Staff and Departments sidebar (+fix x2 ids)

--- a/custom/themes/lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/lib_unb_ca/src/scss/style.scss
@@ -8,6 +8,7 @@
   display: block;
   height: 156px;
   margin-top: -156px;
+  visibility: hidden;
 }
 caption {
   caption-side: top;
